<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Consumer Hub</string>

    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_place">Dummy Place</string>
    <string name="dummy_location">Dummy Location</string>
    <string name="followers">Followers</string>
    <string name="follower_count_background">follower_count_background</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="tab_repositories">Repositories</string>
    <string name="no_follower_found">This user doesn\'t seems to have any follower.</string>
    <string name="no_following_found">This user doesn\'t seems to follow anyone.</string>
    <string name="no_repository_found">This user doesn\'t seems to have a single public repository.</string>
    <string name="description_not_found">No description provided.</string>
    <string name="dummy_description">Dummy Description</string>
    <string name="stargazers">Stargazers</string>
    <string name="tab_index_out_of_bounds">Why are you here?</string>
    <string name="dummy_username">Dummy Username</string>
    <string name="menu_home">Home</string>
    <string name="home_background">Home Background</string>
    <string name="no_internet">Can\'t connect to Internet. Please check your connection!</string>
    <string name="no_server">The server could not be found. Please try again after some time!</string>
    <string name="no_parsing">Parsing error! Please try again after some time!</string>
    <string name="no_timeout">Connection TimeOut! Please check your internet connection.</string>

    <string name="menu_favorite">Favorite User</string>
    <string name="favorite_not_found">There are no user in your Favorite.</string>

    <string name="setting_language">Language</string>
    <string name="setting_reminder">Notification Reminder</string>
    <string name="setting_language_title">Default language</string>
    <string name="setting_reminder_title">Daily notification reminder</string>
    <string name="setting_reminder_summary_off">Disable notification reminder to use the app everyday at 09:00 AM</string>
    <string name="setting_reminder_summary_on">Automatically send notification reminder to use the app everyday at 09:00 AM</string>

    <string name="menu_settings">Settings</string>
    <string name="reminder_message">Let\'s find popular user on Github!</string>
    <string name="reminder_on">Daily reminder is enabled</string>
    <string name="reminder_off">Daily reminder is disabled</string>
    <string name="reminder_title">Hello There!</string>
</resources>
