<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="12dp"
    card_view:cardBackgroundColor="@color/colorCard"
    card_view:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:maxLines="3"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/dummy_description" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardBackgroundColor="@color/colorPrimaryDark"
            card_view:cardCornerRadius="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="@color/colorPrimaryDark"
                card_view:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_txt_stargazers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/stargazers"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@id/bg_stargazers"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/bg_stargazers"
                        android:layout_width="0dp"
                        android:layout_height="@android:dimen/app_icon_size"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/follower_count_background"
                        android:scaleType="fitXY"
                        android:src="@color/colorCard"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_txt_stargazers" />

                    <TextView
                        android:id="@+id/tv_stargazers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stargazers"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/bg_stargazers"
                        app:layout_constraintEnd_toEndOf="@id/bg_stargazers"
                        app:layout_constraintStart_toStartOf="@id/bg_stargazers"
                        app:layout_constraintTop_toTopOf="@id/bg_stargazers" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>